# callisto

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 113c1ade7d53_use_timezone_aware_timestamps.py  25a2e6114b61_initial_schema.py  29d113a84604_fix_ended_at_and_updated_at_to_.py  2b623fce4424_add_users_table.py  673450cc1c94_add_notes_to_calls.py  759e11cbc109_add_tenant_memberships_and_tenant_.py  8827db963a60_add_contacts_table_and_call_contact_id.py  8af11b446675_add_notes_to_contacts.py  8e46278109ee_add_stream_sid_and_callee_number_to_.py  a1c2f4d8b913_introduce_organizations_phone_numbers_.py  a8d5e2b1c907_add_template_categories.py  b0487876cf11_add_is_superadmin_and_nullable_tenant_.py  c4e7a92f1b48_add_sip_user_columns_to_phone_numbers_.py  d18a3b7c0f29_add_sip_credential_list_sid_to_tenants.py  e9f4c1a2d873_add_voicemail_mode_to_phone_numbers.py  f3a7b2e9c104_add_applies_to_to_insight_templates.py
data/demo_audio/: .signature  call-cl-001.transcript.json  call-cl-002.transcript.json  call-nw-001.transcript.json  call-nw-002.transcript.json  call-pl-002.transcript.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
marketing/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
marketing/src/: App.tsx  index.css
scripts/: test_pipeline.py  test_realtime.py  test_twilio_stream.py  watch_insights.py
src/: README.md
(+81 files in other folders)
